feat: update inventory layout and table columns

--- a/inicio.html
+++ b/inicio.html
@@ -61,9 +61,9 @@
                 <a href="inventario.html" class="card">
                     <h2>
                         <span class="icon icon--sm icon-nav-inventario" aria-hidden="true"></span>
-                        <span class="button-label">Inventario de IPs</span>
+                        <span class="button-label">Inventario de Equipos</span>
                     </h2>
-                    <p>Administración de direcciones IPs.</p>
+                    <p>Control y seguimiento del inventario de equipos.</p>
                 </a>
             </div>
         </div>
