feat: validate departamentos personalizados y mejorar filtros

--- a/inventario.html
+++ b/inventario.html
@@ -213,6 +213,12 @@
                 autocomplete="off"
                 hidden
               />
+              <p
+                id="input-departamento-feedback"
+                class="form-input-feedback"
+                role="alert"
+                hidden
+              ></p>
             </div>
             <div class="form-group">
               <label for="input-propietario">Propietario</label>
