Refine new inventory modal validations

--- a/inventario.html
+++ b/inventario.html
@@ -180,6 +180,12 @@
             <div class="form-group">
               <label for="input-dispositivo">Dispositivo</label>
               <input id="input-dispositivo" name="dispositivo" type="text" placeholder="Ej. RVE-123-456" autocomplete="off" />
+              <p
+                id="input-dispositivo-feedback"
+                class="form-input-feedback"
+                role="alert"
+                hidden
+              ></p>
             </div>
             <div class="form-group">
               <label for="input-tipo">Tipo</label>
