--- a/consultar.html
+++ b/consultar.html
@@ -509,6 +509,7 @@
 
   <!-- Libs -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script src="https://cdn.jsdelivr.net/npm/exceljs@4.4.0/dist/exceljs.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
   <script src="js/scanbot/ScanbotSDK.min.js"></script>
   <script src="js/scanbot/ScanbotSDK.ui2.min.js"></script>
