Move descartes export to session detail and use ExcelJS

--- a/consultar.html
+++ b/consultar.html
@@ -136,10 +136,6 @@
                   <input type="date" id="date-end-descartes" title="Fecha de fin" aria-label="Fecha de fin" />
                 </label>
               </div>
-              <button id="export-descartes-btn" class="btn-export button-with-icon" aria-label="Exportar sesiones de descartes">
-                <span class="icon icon--sm icon-export" aria-hidden="true"></span>
-                <span class="button-label">Exportar Excel</span>
-              </button>
               <button id="clear-descartes-filters" class="btn-secondary button-with-icon btn-clear-filters" type="button" hidden aria-label="Limpiar filtros de descartes">
                 <span class="icon icon--sm icon-broom" aria-hidden="true"></span>
                 <span class="button-label">Limpiar filtros</span>
@@ -223,6 +219,10 @@
                   id="search-equipos"
                   placeholder="Buscar por descripción, marca, modelo, serie o marbete..." />
               </div>
+              <button id="export-sesion-descartes-btn" class="btn-export button-with-icon" type="button" aria-label="Exportar sesión de descartes">
+                <span class="icon icon--sm icon-export" aria-hidden="true"></span>
+                <span class="button-label">Exportar Excel</span>
+              </button>
               <button id="btn-agregar-equipo" class="btn-principal btn-anadir-equipo button-with-icon" type="button">
                 <span class="icon icon--sm icon-plus" aria-hidden="true"></span>
                 <span class="button-label">Añadir Equipo</span>
