Add page descriptions and improve keyboard interactions

--- a/consultar.html
+++ b/consultar.html
@@ -29,7 +29,10 @@
 
   <main id="main-content" style="display:none;">
     <div class="container">
-      <h1>Centro de Control</h1>
+      <div class="page-heading page-heading--left">
+        <h1>Centro de Control</h1>
+        <p class="page-description">Consulta, filtra y administra los registros de visitantes y las sesiones de descartes.</p>
+      </div>
 
       <!-- Pestañas -->
       <div class="tabs-nav">
