--- a/descartes.html
+++ b/descartes.html
@@ -33,7 +33,10 @@
 
     <main id="main-content" style="display: none;">
         <div class="container">
-            <h1>Registro de Descartes</h1>
+            <div class="page-heading">
+                <h1>Registro de Descartes</h1>
+                <p id="descartes-description" class="page-description">Inicia una sesión para documentar los equipos que serán descartados y sus detalles técnicos.</p>
+            </div>
 
             <div id="inicio-descarte-section" class="content-center">
                 <button id="btn-iniciar-descarte" class="btn-iniciar button-with-icon">
