Ajustar alineaciones móviles y textos

--- a/consultar.html
+++ b/consultar.html
@@ -30,7 +30,7 @@
   <main id="main-content" style="display:none;">
     <div class="container">
       <div class="page-heading page-heading--left">
-        <h1>Centro de Control</h1>
+        <h1>Panel de Consultas</h1>
         <p class="page-description">Consulta, filtra y administra los registros de visitantes y las sesiones de descartes.</p>
       </div>
 
