--- a/inventario.html
+++ b/inventario.html
@@ -231,7 +231,7 @@
               <input id="input-propietario" name="propietario" type="text" placeholder="Nombre del propietario" autocomplete="off" />
             </div>
             <div class="form-group">
-              <label for="input-usuario">Usuario</label>
+              <label for="input-usuario">Usuario de Windows</label>
               <input id="input-usuario" name="usuario" type="text" placeholder="Usuario asignado" autocomplete="off" />
             </div>
             <fieldset class="form-group form-group-inline" role="radiogroup" aria-labelledby="label-tiene-ip">
