Ajusta cabeceras responsivas y agrega iconos en login

--- a/descartes.html
+++ b/descartes.html
@@ -33,9 +33,15 @@
 
     <main id="main-content" style="display: none;">
         <div class="container">
-            <div class="page-heading">
-                <h1>Registro de Descartes</h1>
-                <p id="descartes-description" class="page-description">Inicia una sesión para documentar los equipos que serán descartados y sus detalles técnicos.</p>
+            <div class="page-heading page-heading--left">
+                <h1>
+                    <span class="text-variant--desktop text-variant--block">Registro de Descartes</span>
+                    <span class="text-variant--mobile text-variant--block">Descartes</span>
+                </h1>
+                <p id="descartes-description" class="page-description">
+                    <span class="text-variant--desktop text-variant--block">Inicia una sesión para documentar los equipos que serán descartados y sus detalles técnicos.</span>
+                    <span class="text-variant--mobile text-variant--block">Inicia sesiones para documentar equipos descartados.</span>
+                </p>
             </div>
 
             <div id="inicio-descarte-section" class="content-center">
