--- a/index.html
+++ b/index.html
@@ -33,9 +33,15 @@
     <main id="main-content" style="display: none;">
         
         <div class="container">
-            <div class="page-heading">
-                <h1>Registro de Visitantes</h1>
-                <p class="page-description">Registra visitantes rápidamente de forma manual o mediante el escaneo de códigos QR.</p>
+            <div class="page-heading page-heading--left">
+                <h1>
+                    <span class="text-variant--desktop text-variant--block">Registro de Visitantes</span>
+                    <span class="text-variant--mobile text-variant--block">Registro</span>
+                </h1>
+                <p class="page-description">
+                    <span class="text-variant--desktop text-variant--block">Registra visitantes rápidamente de forma manual o mediante el escaneo de códigos QR.</span>
+                    <span class="text-variant--mobile text-variant--block">Registra visitantes manualmente o con códigos QR.</span>
+                </p>
             </div>
 
             <div class="layout-wrapper">
