--- a/inventario.html
+++ b/inventario.html
@@ -28,9 +28,15 @@
   <main id="main-content" style="display:none;">
     <div class="inventory-container">
       <header class="inventory-header">
-        <div class="inventory-heading">
-          <h1>Inventario de Equipos</h1>
-          <p class="page-description">Control y registro de equipos</p>
+        <div class="inventory-heading page-heading page-heading--left">
+          <h1>
+            <span class="text-variant--desktop text-variant--block">Inventario de Equipos</span>
+            <span class="text-variant--mobile text-variant--block">Inventario</span>
+          </h1>
+          <p class="page-description">
+            <span class="text-variant--desktop text-variant--block">Control y registro de equipos</span>
+            <span class="text-variant--mobile text-variant--block">Control rápido del inventario de equipos</span>
+          </p>
         </div>
         <div class="inventory-header-actions">
           <button id="btn-toggle-totales" class="btn-secondary button-with-icon btn-toggle-totales" type="button" aria-expanded="false">
