--- a/consultar.html
+++ b/consultar.html
@@ -30,8 +30,14 @@
   <main id="main-content" style="display:none;">
     <div class="container">
       <div class="page-heading page-heading--left">
-        <h1>Panel de Consultas</h1>
-        <p class="page-description">Consulta, filtra y administra los registros de visitantes y las sesiones de descartes.</p>
+        <h1>
+          <span class="text-variant--desktop text-variant--block">Panel de Consultas</span>
+          <span class="text-variant--mobile text-variant--block">Consultas</span>
+        </h1>
+        <p class="page-description">
+          <span class="text-variant--desktop text-variant--block">Consulta, filtra y administra los registros de visitantes y las sesiones de descartes.</span>
+          <span class="text-variant--mobile text-variant--block">Consulta y administra registros de visitantes y descartes.</span>
+        </p>
       </div>
 
       <!-- Pestañas -->
