--- a/login.html
+++ b/login.html
@@ -55,15 +55,24 @@
                     <div id="step-email">
                         <label for="email">Correo Electrónico:</label>
                         <input type="email" id="email" required autocomplete="email">
-                        <button type="button" id="next-btn" class="btn-primary">Siguiente</button>
+                        <button type="button" id="next-btn" class="btn-primary button-with-icon">
+                            <span class="icon icon--sm icon-next" aria-hidden="true"></span>
+                            <span class="button-label">Siguiente</span>
+                        </button>
                     </div>
 
                     <div id="step-password" class="is-hidden">
                         <label for="password">Contraseña:</label>
                         <input type="password" id="password" required>
                         <div class="form-buttons">
-                            <button type="button" id="back-btn" class="btn-secondary">Regresar</button>
-                            <button type="submit" id="login-btn" class="btn-primary">Ingresar</button>
+                            <button type="button" id="back-btn" class="btn-secondary button-with-icon">
+                                <span class="icon icon--sm icon-back" aria-hidden="true"></span>
+                                <span class="button-label">Regresar</span>
+                            </button>
+                            <button type="submit" id="login-btn" class="btn-primary button-with-icon">
+                                <span class="icon icon--sm icon-login" aria-hidden="true"></span>
+                                <span class="button-label">Ingresar</span>
+                            </button>
                         </div>
                     </div>
                 </form>
