Ajusta encabezados de páginas para alineación y textos concisos

--- a/consultar.html
+++ b/consultar.html
@@ -31,12 +31,12 @@
     <div class="container">
       <div class="page-heading page-heading--left">
         <h1>
-          <span class="text-variant--desktop text-variant--block">Panel de Consultas</span>
+          <span class="text-variant--desktop text-variant--block">Consultas de Registros</span>
           <span class="text-variant--mobile text-variant--block">Consultas</span>
         </h1>
         <p class="page-description">
-          <span class="text-variant--desktop text-variant--block">Consulta, filtra y administra los registros de visitantes y las sesiones de descartes.</span>
-          <span class="text-variant--mobile text-variant--block">Consulta y administra registros de visitantes y descartes.</span>
+          <span class="text-variant--desktop text-variant--block">Revisa y gestiona visitas y descartes en un solo lugar.</span>
+          <span class="text-variant--mobile text-variant--block">Gestiona visitas y descartes al instante.</span>
         </p>
       </div>
 
