--- a/descartes.html
+++ b/descartes.html
@@ -33,14 +33,14 @@
 
     <main id="main-content" style="display: none;">
         <div class="container">
-            <div class="page-heading page-heading--left">
+            <div class="page-heading">
                 <h1>
                     <span class="text-variant--desktop text-variant--block">Registro de Descartes</span>
                     <span class="text-variant--mobile text-variant--block">Descartes</span>
                 </h1>
                 <p id="descartes-description" class="page-description">
-                    <span class="text-variant--desktop text-variant--block">Inicia una sesión para documentar los equipos que serán descartados y sus detalles técnicos.</span>
-                    <span class="text-variant--mobile text-variant--block">Inicia sesiones para documentar equipos descartados.</span>
+                    <span class="text-variant--desktop text-variant--block">Inicia sesiones para registrar equipos descartados.</span>
+                    <span class="text-variant--mobile text-variant--block">Inicia sesiones de descarte.</span>
                 </p>
             </div>
 
