--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                     <span class="text-variant--mobile text-variant--block">Registro</span>
                 </h1>
                 <p class="page-description">
-                    <span class="text-variant--desktop text-variant--block">Registra visitantes rápidamente de forma manual o mediante el escaneo de códigos QR.</span>
-                    <span class="text-variant--mobile text-variant--block">Registra visitantes manualmente o con códigos QR.</span>
+                    <span class="text-variant--desktop text-variant--block">Registra visitantes al instante con formulario o QR.</span>
+                    <span class="text-variant--mobile text-variant--block">Registra visitas con formulario o QR.</span>
                 </p>
             </div>
 
