--- a/inventario.html
+++ b/inventario.html
@@ -34,8 +34,8 @@
             <span class="text-variant--mobile text-variant--block">Inventario</span>
           </h1>
           <p class="page-description">
-            <span class="text-variant--desktop text-variant--block">Control y registro de equipos</span>
-            <span class="text-variant--mobile text-variant--block">Control rápido del inventario de equipos</span>
+            <span class="text-variant--desktop text-variant--block">Supervisa equipos y estados en tiempo real.</span>
+            <span class="text-variant--mobile text-variant--block">Controla equipos y estados.</span>
           </p>
         </div>
         <div class="inventory-header-actions">
