Actualiza titulos de escritorio

--- a/consultar.html
+++ b/consultar.html
@@ -31,11 +31,11 @@
     <div class="container">
       <div class="page-heading page-heading--left">
         <h1>
-          <span class="text-variant--desktop text-variant--block">Consultas de Registros</span>
+          <span class="text-variant--desktop text-variant--block">Consulta de Datos</span>
           <span class="text-variant--mobile text-variant--block">Consultas</span>
         </h1>
         <p class="page-description">
-          <span class="text-variant--desktop text-variant--block">Revisa y gestiona visitas y descartes en un solo lugar.</span>
+          <span class="text-variant--desktop text-variant--block">Revisa y gestiona datos en un solo lugar.</span>
           <span class="text-variant--mobile text-variant--block">Gestiona visitas y descartes al instante.</span>
         </p>
       </div>
