--- a/descartes.html
+++ b/descartes.html
@@ -39,7 +39,7 @@
                     <span class="text-variant--mobile text-variant--block">Descartes</span>
                 </h1>
                 <p id="descartes-description" class="page-description">
-                    <span class="text-variant--desktop text-variant--block">Inicia sesiones para registrar equipos descartados.</span>
+                    <span class="text-variant--desktop text-variant--block">Registra equipos descartados.</span>
                     <span class="text-variant--mobile text-variant--block">Inicia sesiones de descarte.</span>
                 </p>
             </div>
