Handle Scanbot timeout with reload workflow

--- a/descartes.html
+++ b/descartes.html
@@ -73,9 +73,13 @@
                                     <span class="icon icon--sm icon-scan" aria-hidden="true"></span>
                                     <span class="sr-only">Escanear marbete</span>
                                 </button>
+                                <button type="button" class="btn-reload-scan button-with-icon" hidden aria-label="Recargar página" title="Recargar página">
+                                    <span class="icon icon--sm icon-reload" aria-hidden="true"></span>
+                                    <span class="sr-only">Recargar página</span>
+                                </button>
                             </div>
                         </div>
-                        
+
                         <div class="form-group">
                             <label for="serie">Serie:</label>
                             <div class="input-with-button">
@@ -83,6 +87,10 @@
                                 <button type="button" class="btn-scan button-with-icon" data-target-input="serie">
                                     <span class="icon icon--sm icon-scan" aria-hidden="true"></span>
                                     <span class="sr-only">Escanear serie</span>
+                                </button>
+                                <button type="button" class="btn-reload-scan button-with-icon" hidden aria-label="Recargar página" title="Recargar página">
+                                    <span class="icon icon--sm icon-reload" aria-hidden="true"></span>
+                                    <span class="sr-only">Recargar página</span>
                                 </button>
                             </div>
                         </div>
@@ -202,6 +210,10 @@
                                     <span class="icon icon--sm icon-scan" aria-hidden="true"></span>
                                     <span class="sr-only">Escanear marbete</span>
                                 </button>
+                                <button type="button" class="btn-reload-scan button-with-icon" hidden aria-label="Recargar página" title="Recargar página">
+                                    <span class="icon icon--sm icon-reload" aria-hidden="true"></span>
+                                    <span class="sr-only">Recargar página</span>
+                                </button>
                             </div>
                         </div>
                         <div class="form-group">
@@ -211,6 +223,10 @@
                                 <button type="button" class="btn-scan button-with-icon" data-target-input="edit-serie">
                                     <span class="icon icon--sm icon-scan" aria-hidden="true"></span>
                                     <span class="sr-only">Escanear serie</span>
+                                </button>
+                                <button type="button" class="btn-reload-scan button-with-icon" hidden aria-label="Recargar página" title="Recargar página">
+                                    <span class="icon icon--sm icon-reload" aria-hidden="true"></span>
+                                    <span class="sr-only">Recargar página</span>
                                 </button>
                             </div>
                         </div>
