--- a/consultar.html
+++ b/consultar.html
@@ -349,6 +349,10 @@
                   <span class="icon icon--sm icon-scan" aria-hidden="true"></span>
                   <span class="sr-only">Escanear marbete</span>
                 </button>
+                <button type="button" class="btn-reload-scan button-with-icon" hidden aria-label="Recargar página" title="Recargar página">
+                  <span class="icon icon--sm icon-reload" aria-hidden="true"></span>
+                  <span class="sr-only">Recargar página</span>
+                </button>
               </div>
             </div>
             <div class="form-group">
@@ -358,6 +362,10 @@
                 <button type="button" class="btn-scan button-with-icon" data-target-input="editq-serie">
                   <span class="icon icon--sm icon-scan" aria-hidden="true"></span>
                   <span class="sr-only">Escanear serie</span>
+                </button>
+                <button type="button" class="btn-reload-scan button-with-icon" hidden aria-label="Recargar página" title="Recargar página">
+                  <span class="icon icon--sm icon-reload" aria-hidden="true"></span>
+                  <span class="sr-only">Recargar página</span>
                 </button>
               </div>
             </div>
@@ -418,6 +426,10 @@
                   <span class="icon icon--sm icon-scan" aria-hidden="true"></span>
                   <span class="sr-only">Escanear marbete</span>
                 </button>
+                <button type="button" class="btn-reload-scan button-with-icon" hidden aria-label="Recargar página" title="Recargar página">
+                  <span class="icon icon--sm icon-reload" aria-hidden="true"></span>
+                  <span class="sr-only">Recargar página</span>
+                </button>
               </div>
             </div>
             <div class="form-group">
@@ -427,6 +439,10 @@
                 <button type="button" class="btn-scan button-with-icon" data-target-input="add-serie">
                   <span class="icon icon--sm icon-scan" aria-hidden="true"></span>
                   <span class="sr-only">Escanear serie</span>
+                </button>
+                <button type="button" class="btn-reload-scan button-with-icon" hidden aria-label="Recargar página" title="Recargar página">
+                  <span class="icon icon--sm icon-reload" aria-hidden="true"></span>
+                  <span class="sr-only">Recargar página</span>
                 </button>
               </div>
             </div>
