--- a/index.html
+++ b/index.html
@@ -50,10 +50,16 @@
                     
                     <h2>Escanear Código QR</h2>
                     <p class="section-subtitle">Usa la cámara para un llenado automático e instantáneo.</p>
-                    <button id="btn-scan-live" class="btn-principal button-with-icon">
-                        <span class="icon icon--sm icon-qr" aria-hidden="true"></span>
-                        <span class="button-label">Escanear</span>
-                    </button>
+                    <div class="scanner-action-row">
+                        <button id="btn-scan-live" class="btn-principal button-with-icon">
+                            <span class="icon icon--sm icon-qr" aria-hidden="true"></span>
+                            <span class="button-label">Escanear</span>
+                        </button>
+                        <button type="button" class="btn-reload-scan button-with-icon" hidden aria-label="Recargar página" title="Recargar página">
+                            <span class="icon icon--sm icon-reload" aria-hidden="true"></span>
+                            <span class="sr-only">Recargar página</span>
+                        </button>
+                    </div>
                     <pre id="scanbot-result-box" class="qr-result-box" style="display: none;"></pre>
 
                     <hr style="margin: 25px 0; border-color: var(--border-color); border-style: dashed;">
