Add scanner countdown timer and UI tweaks

--- a/descartes.html
+++ b/descartes.html
@@ -75,7 +75,7 @@
                                 </button>
                                 <button type="button" class="btn-reload-scan button-with-icon" hidden aria-label="Recargar página" title="Recargar página">
                                     <span class="icon icon--sm icon-reload" aria-hidden="true"></span>
-                                    <span class="sr-only">Recargar página</span>
+                                    <span class="button-label">Recargar</span>
                                 </button>
                             </div>
                         </div>
@@ -90,7 +90,7 @@
                                 </button>
                                 <button type="button" class="btn-reload-scan button-with-icon" hidden aria-label="Recargar página" title="Recargar página">
                                     <span class="icon icon--sm icon-reload" aria-hidden="true"></span>
-                                    <span class="sr-only">Recargar página</span>
+                                    <span class="button-label">Recargar</span>
                                 </button>
                             </div>
                         </div>
@@ -212,7 +212,7 @@
                                 </button>
                                 <button type="button" class="btn-reload-scan button-with-icon" hidden aria-label="Recargar página" title="Recargar página">
                                     <span class="icon icon--sm icon-reload" aria-hidden="true"></span>
-                                    <span class="sr-only">Recargar página</span>
+                                    <span class="button-label">Recargar</span>
                                 </button>
                             </div>
                         </div>
@@ -226,7 +226,7 @@
                                 </button>
                                 <button type="button" class="btn-reload-scan button-with-icon" hidden aria-label="Recargar página" title="Recargar página">
                                     <span class="icon icon--sm icon-reload" aria-hidden="true"></span>
-                                    <span class="sr-only">Recargar página</span>
+                                    <span class="button-label">Recargar</span>
                                 </button>
                             </div>
                         </div>
