--- a/consultar.html
+++ b/consultar.html
@@ -351,7 +351,7 @@
                 </button>
                 <button type="button" class="btn-reload-scan button-with-icon" hidden aria-label="Recargar página" title="Recargar página">
                   <span class="icon icon--sm icon-reload" aria-hidden="true"></span>
-                  <span class="sr-only">Recargar página</span>
+                  <span class="button-label">Recargar</span>
                 </button>
               </div>
             </div>
@@ -365,7 +365,7 @@
                 </button>
                 <button type="button" class="btn-reload-scan button-with-icon" hidden aria-label="Recargar página" title="Recargar página">
                   <span class="icon icon--sm icon-reload" aria-hidden="true"></span>
-                  <span class="sr-only">Recargar página</span>
+                  <span class="button-label">Recargar</span>
                 </button>
               </div>
             </div>
@@ -428,7 +428,7 @@
                 </button>
                 <button type="button" class="btn-reload-scan button-with-icon" hidden aria-label="Recargar página" title="Recargar página">
                   <span class="icon icon--sm icon-reload" aria-hidden="true"></span>
-                  <span class="sr-only">Recargar página</span>
+                  <span class="button-label">Recargar</span>
                 </button>
               </div>
             </div>
@@ -442,7 +442,7 @@
                 </button>
                 <button type="button" class="btn-reload-scan button-with-icon" hidden aria-label="Recargar página" title="Recargar página">
                   <span class="icon icon--sm icon-reload" aria-hidden="true"></span>
-                  <span class="sr-only">Recargar página</span>
+                  <span class="button-label">Recargar</span>
                 </button>
               </div>
             </div>
