--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         </button>
                         <button type="button" class="btn-reload-scan button-with-icon" hidden aria-label="Recargar página" title="Recargar página">
                             <span class="icon icon--sm icon-reload" aria-hidden="true"></span>
-                            <span class="sr-only">Recargar página</span>
+                            <span class="button-label">Recargar</span>
                         </button>
                     </div>
                     <pre id="scanbot-result-box" class="qr-result-box" style="display: none;"></pre>
