--- a/consultar.html
+++ b/consultar.html
@@ -349,9 +349,9 @@
                   <span class="icon icon--sm icon-scan" aria-hidden="true"></span>
                   <span class="sr-only">Escanear marbete</span>
                 </button>
-                <button type="button" class="btn-reload-scan button-with-icon" hidden aria-label="Recargar página" title="Recargar página">
+                <button type="button" class="btn-reload-scan btn-reload-scan--icon-only button-with-icon" hidden aria-label="Recargar página" title="Recargar página">
                   <span class="icon icon--sm icon-reload" aria-hidden="true"></span>
-                  <span class="button-label">Recargar</span>
+                  <span class="sr-only">Recargar</span>
                 </button>
               </div>
             </div>
@@ -363,9 +363,9 @@
                   <span class="icon icon--sm icon-scan" aria-hidden="true"></span>
                   <span class="sr-only">Escanear serie</span>
                 </button>
-                <button type="button" class="btn-reload-scan button-with-icon" hidden aria-label="Recargar página" title="Recargar página">
+                <button type="button" class="btn-reload-scan btn-reload-scan--icon-only button-with-icon" hidden aria-label="Recargar página" title="Recargar página">
                   <span class="icon icon--sm icon-reload" aria-hidden="true"></span>
-                  <span class="button-label">Recargar</span>
+                  <span class="sr-only">Recargar</span>
                 </button>
               </div>
             </div>
@@ -426,9 +426,9 @@
                   <span class="icon icon--sm icon-scan" aria-hidden="true"></span>
                   <span class="sr-only">Escanear marbete</span>
                 </button>
-                <button type="button" class="btn-reload-scan button-with-icon" hidden aria-label="Recargar página" title="Recargar página">
+                <button type="button" class="btn-reload-scan btn-reload-scan--icon-only button-with-icon" hidden aria-label="Recargar página" title="Recargar página">
                   <span class="icon icon--sm icon-reload" aria-hidden="true"></span>
-                  <span class="button-label">Recargar</span>
+                  <span class="sr-only">Recargar</span>
                 </button>
               </div>
             </div>
@@ -440,9 +440,9 @@
                   <span class="icon icon--sm icon-scan" aria-hidden="true"></span>
                   <span class="sr-only">Escanear serie</span>
                 </button>
-                <button type="button" class="btn-reload-scan button-with-icon" hidden aria-label="Recargar página" title="Recargar página">
+                <button type="button" class="btn-reload-scan btn-reload-scan--icon-only button-with-icon" hidden aria-label="Recargar página" title="Recargar página">
                   <span class="icon icon--sm icon-reload" aria-hidden="true"></span>
-                  <span class="button-label">Recargar</span>
+                  <span class="sr-only">Recargar</span>
                 </button>
               </div>
             </div>
