--- a/descartes.html
+++ b/descartes.html
@@ -73,9 +73,9 @@
                                     <span class="icon icon--sm icon-scan" aria-hidden="true"></span>
                                     <span class="sr-only">Escanear marbete</span>
                                 </button>
-                                <button type="button" class="btn-reload-scan button-with-icon" hidden aria-label="Recargar página" title="Recargar página">
+                                <button type="button" class="btn-reload-scan btn-reload-scan--icon-only button-with-icon" hidden aria-label="Recargar página" title="Recargar página">
                                     <span class="icon icon--sm icon-reload" aria-hidden="true"></span>
-                                    <span class="button-label">Recargar</span>
+                                    <span class="sr-only">Recargar</span>
                                 </button>
                             </div>
                         </div>
@@ -88,9 +88,9 @@
                                     <span class="icon icon--sm icon-scan" aria-hidden="true"></span>
                                     <span class="sr-only">Escanear serie</span>
                                 </button>
-                                <button type="button" class="btn-reload-scan button-with-icon" hidden aria-label="Recargar página" title="Recargar página">
+                                <button type="button" class="btn-reload-scan btn-reload-scan--icon-only button-with-icon" hidden aria-label="Recargar página" title="Recargar página">
                                     <span class="icon icon--sm icon-reload" aria-hidden="true"></span>
-                                    <span class="button-label">Recargar</span>
+                                    <span class="sr-only">Recargar</span>
                                 </button>
                             </div>
                         </div>
@@ -210,9 +210,9 @@
                                     <span class="icon icon--sm icon-scan" aria-hidden="true"></span>
                                     <span class="sr-only">Escanear marbete</span>
                                 </button>
-                                <button type="button" class="btn-reload-scan button-with-icon" hidden aria-label="Recargar página" title="Recargar página">
+                                <button type="button" class="btn-reload-scan btn-reload-scan--icon-only button-with-icon" hidden aria-label="Recargar página" title="Recargar página">
                                     <span class="icon icon--sm icon-reload" aria-hidden="true"></span>
-                                    <span class="button-label">Recargar</span>
+                                    <span class="sr-only">Recargar</span>
                                 </button>
                             </div>
                         </div>
@@ -224,9 +224,9 @@
                                     <span class="icon icon--sm icon-scan" aria-hidden="true"></span>
                                     <span class="sr-only">Escanear serie</span>
                                 </button>
-                                <button type="button" class="btn-reload-scan button-with-icon" hidden aria-label="Recargar página" title="Recargar página">
+                                <button type="button" class="btn-reload-scan btn-reload-scan--icon-only button-with-icon" hidden aria-label="Recargar página" title="Recargar página">
                                     <span class="icon icon--sm icon-reload" aria-hidden="true"></span>
-                                    <span class="button-label">Recargar</span>
+                                    <span class="sr-only">Recargar</span>
                                 </button>
                             </div>
                         </div>
