Alinea el botón de recarga con el de escanear

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                             <span class="icon icon--sm icon-qr" aria-hidden="true"></span>
                             <span class="button-label">Escanear</span>
                         </button>
-                        <button type="button" class="btn-reload-scan button-with-icon" hidden aria-label="Recargar página" title="Recargar página">
+                        <button type="button" class="btn-reload-scan btn-principal button-with-icon" hidden aria-label="Recargar página" title="Recargar página">
                             <span class="icon icon--sm icon-reload" aria-hidden="true"></span>
                             <span class="button-label">Recargar</span>
                         </button>
