feat: add contact footer to login page

--- a/login.html
+++ b/login.html
@@ -80,6 +80,19 @@
         </div>
     </main>
 
+    <footer class="login-footer">
+        <div class="login-footer-links" role="navigation" aria-label="Enlaces de contacto">
+            <a class="login-footer-link" href="https://github.com/kconcep-dev" target="_blank" rel="noopener noreferrer">
+                <img src="assets/icons/github.svg" alt="" class="login-footer-icon" aria-hidden="true">
+                <span>GitHub</span>
+            </a>
+            <a class="login-footer-link" href="mailto:concepcion.kelieser@gmail.com">
+                <img src="assets/icons/gmail.svg" alt="" class="login-footer-icon" aria-hidden="true">
+                <span>Gmail</span>
+            </a>
+        </div>
+    </footer>
+
     <div id="loading-overlay" class="loading-overlay">
         <div class="loading-content">
             <div class="spinner"></div>
