--- a/inventario.html
+++ b/inventario.html
@@ -5,6 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Inventario de Equipos - Sistema de Registro</title>
 
+  <meta name="theme-color" content="#2563EB" media="(prefers-color-scheme: light)" />
+  <meta name="theme-color" content="#111827" media="(prefers-color-scheme: dark)" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <meta name="apple-mobile-web-app-title" content="Sistema de Registro" />
+  <meta name="color-scheme" content="light dark" />
+
+  <link rel="manifest" href="manifest.webmanifest" />
+  <link rel="apple-touch-icon" href="assets/images/logo.png" />
+
   <script>
     (function () {
       try {
@@ -16,7 +26,7 @@
 
   <link rel="stylesheet" href="css/global.css" />
   <link rel="stylesheet" href="css/inventario.css" />
-  <link rel="icon" href="assets/icons/icon-192.png" />
+  <link rel="icon" href="assets/images/logo.png" />
 </head>
 <body class="page-inventario">
   <div id="navbar-placeholder"></div>
