Adjust PWA meta tags and login footer icons

--- a/login.html
+++ b/login.html
@@ -5,10 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iniciar Sesión - Sistema de Registro</title>
 
-    <meta name="theme-color" content="#2563EB" media="(prefers-color-scheme: light)">
-    <meta name="theme-color" content="#111827" media="(prefers-color-scheme: dark)">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Sistema de Registro">
     <meta name="color-scheme" content="light dark">
 
@@ -92,13 +89,13 @@
 
     <footer class="login-footer">
         <div class="login-footer-links" role="navigation" aria-label="Enlaces de contacto">
-            <a class="login-footer-link" href="https://github.com/kconcep-dev" target="_blank" rel="noopener noreferrer">
+            <a class="login-footer-link" href="https://github.com/kconcep-dev" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
                 <img src="assets/icons/github.svg" alt="" class="login-footer-icon" aria-hidden="true">
-                <span>GitHub</span>
+                <span class="login-footer-label" aria-hidden="true">GitHub</span>
             </a>
-            <a class="login-footer-link" href="mailto:concepcion.kelieser@gmail.com">
+            <a class="login-footer-link" href="mailto:concepcion.kelieser@gmail.com" aria-label="Gmail">
                 <img src="assets/icons/gmail.svg" alt="" class="login-footer-icon" aria-hidden="true">
-                <span>Gmail</span>
+                <span class="login-footer-label" aria-hidden="true">Gmail</span>
             </a>
         </div>
     </footer>
