Add basic PWA support

--- a/descartes.html
+++ b/descartes.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="css/descartes.css">
 
     <link rel="icon" href="assets/icons/icon-192.png">
+    <link rel="manifest" href="manifest.json">
 </head>
 <body class="page-descartes-inicio">
     <div id="navbar-placeholder"></div>
