--- a/consultar.html
+++ b/consultar.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="css/global.css" />
   <link rel="stylesheet" href="css/consultar.css" />
   <link rel="icon" href="assets/icons/icon-192.png" />
+  <link rel="manifest" href="manifest.json" />
 </head>
 
 <body>
