--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/registro.css">
     <link rel="icon" href="assets/icons/icon-192.png">
+    <link rel="manifest" href="manifest.json">
 </head>
 <body>
     <div id="navbar-placeholder"></div>
