--- a/inicio.html
+++ b/inicio.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="css/inicio.css">
 
     <link rel="icon" href="assets/icons/icon-192.png">
+    <link rel="manifest" href="manifest.json">
 </head>
 <body class="page-inicio">
     <div id="navbar-placeholder"></div>
