--- a/inventario.html
+++ b/inventario.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="css/global.css" />
   <link rel="stylesheet" href="css/inventario.css" />
   <link rel="icon" href="assets/icons/icon-192.png" />
+  <link rel="manifest" href="manifest.json" />
 </head>
 <body class="page-inventario">
   <div id="navbar-placeholder"></div>
