--- a/login.html
+++ b/login.html
@@ -23,8 +23,9 @@
     
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/login.css">
-    
+
     <link rel="icon" href="assets/icons/icon-192.png">
+    <link rel="manifest" href="manifest.json">
 </head>
 <body>
     <div id="welcome-screen">
