Remove obsolete scanner residues

--- a/consultar.html
+++ b/consultar.html
@@ -60,7 +60,7 @@
       </div>
 
       <!-- Tab: Visitantes -->
-      <div id="visitantes-content" class="tab-content active">
+      <div class="tab-content active">
         <div class="controls-area" data-controls="visitantes">
           <div class="controls-count">
             <span id="visitantes-total" class="count-pill" aria-live="polite">0 registros</span>
@@ -117,7 +117,7 @@
       </div>
 
             <!-- Tab: Descartes (Lista de sesiones) -->
-      <div id="descartes-content" class="tab-content">
+      <div class="tab-content">
         <!-- Lista de sesiones -->
         <section id="sesiones-lista">
           <div class="controls-area" data-controls="descartes">
