--- a/descartes.html
+++ b/descartes.html
@@ -6,7 +6,7 @@
     <title>Descartar - Sistema de Registro</title>
 
     <script>
-        // Script para prevenir el "flash" del tema oscuro
+        /* Aplica el modo oscuro almacenado antes de dibujar la interfaz para evitar cambios bruscos. */
         (function() {
             try {
                 const theme = localStorage.getItem('theme');
@@ -14,7 +14,7 @@
                     document.documentElement.classList.add('dark-mode');
                 }
             } catch (e) {
-                // No hacer nada si localStorage no está disponible
+                /* Continuamos con el tema por defecto si el almacenamiento no responde. */
             }
         })();
     </script>
@@ -26,6 +26,7 @@
     <link rel="manifest" href="manifest.json">
 </head>
 <body class="page-descartes-inicio">
+    <!-- Espacio reservado para la barra de navegación importada -->
     <div id="navbar-placeholder"></div>
 
     <div id="loader" class="loader-wrapper">
@@ -45,6 +46,7 @@
                 </p>
             </div>
 
+            <!-- Bloque inicial para iniciar sesiones cuando no hay una activa -->
             <div id="inicio-descarte-section" class="content-center">
                 <button id="btn-iniciar-descarte" class="btn-iniciar button-with-icon">
                     <span class="icon icon--sm icon-plus" aria-hidden="true"></span>
@@ -52,6 +54,7 @@
                 </button>
             </div>
 
+            <!-- Formulario completo para registrar equipos dentro de una sesión activa -->
             <div id="registro-equipos-section" class="content-center" style="display: none;">
 
                 <h4 class="session-indicator">
@@ -119,6 +122,7 @@
                     </button>
                 </form>
 
+                <!-- Controles para cerrar la sesión y documentar observaciones generales -->
                 <div class="finalizar-seccion">
                    <label for="observacion">Observación General:</label>
                    <textarea id="observacion" rows="3" placeholder="Añade cualquier observación relevante..."></textarea>
@@ -128,6 +132,7 @@
                    </button>
                </div>
 
+                <!-- Tabla resumen de los equipos agregados durante la sesión actual -->
                 <div class="tabla-equipos-wrapper">
                     <h3>Equipos Registrados (<span id="contador-equipos">0</span>)</h3>
                     <div class="table-container">
@@ -145,8 +150,7 @@
                                     <th>Acciones</th>
                                 </tr>
                             </thead>
-                            <tbody>
-                                </tbody>
+                            <tbody></tbody>
                         </table>
                     </div>
                 </div>
@@ -154,6 +158,7 @@
         </div>
     </main>
 
+    <!-- Modal para crear una nueva sesión de descarte -->
     <div id="modal-nueva-sesion" class="modal-overlay">
         <div class="modal-content">
             <button id="btn-cerrar-modal" class="modal-close-btn" type="button" aria-label="Cerrar modal">
@@ -173,23 +178,25 @@
         </div>
     </div>
 
+    <!-- Modal genérico para confirmar acciones importantes -->
     <div id="modal-confirmacion" class="modal-overlay">
         <div class="modal-content">
             <h2 id="confirm-title">¿Estás seguro?</h2>
             <p id="confirm-message">Esta acción no se puede deshacer.</p>
             <div class="modal-buttons">
-            <button id="btn-confirmar-cancelar" class="btn-secondary button-with-icon">
-                <span class="icon icon--sm icon-close-cancel" aria-hidden="true"></span>
-                <span class="button-label">Cancelar</span>
-            </button>
-            <button id="btn-confirmar-aceptar" class="btn-danger button-with-icon">
-                <span class="icon icon--sm icon-check" aria-hidden="true"></span>
-                <span class="button-label">Aceptar</span>
-            </button>
+                <button id="btn-confirmar-cancelar" class="btn-secondary button-with-icon">
+                    <span class="icon icon--sm icon-close-cancel" aria-hidden="true"></span>
+                    <span class="button-label">Cancelar</span>
+                </button>
+                <button id="btn-confirmar-aceptar" class="btn-danger button-with-icon">
+                    <span class="icon icon--sm icon-check" aria-hidden="true"></span>
+                    <span class="button-label">Aceptar</span>
+                </button>
             </div>
         </div>
     </div>
 
+    <!-- Modal que permite editar equipos previamente capturados -->
     <div id="modal-editar-equipo" class="modal-overlay">
         <div class="modal-content">
             <button id="btn-cerrar-modal-editar" class="modal-close-btn" type="button" aria-label="Cerrar modal">
@@ -263,6 +270,7 @@
             </div>
     </div>
     
+    <!-- Contenedor para mostrar alertas breves al usuario -->
     <div id="toast-notification" class="toast">
         <span id="toast-message"></span>
     </div>
